added triggerbot, working on calling Button1Down - however as it is a signal will need to do further reversing in order to find where the connected functions, similarly to how synapse uses 'getconnections'. follow the line of execution until i find something

--- a/rblxintfr/rblxintfr.vcxproj
+++ b/rblxintfr/rblxintfr.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="Memory.h" />
     <ClInclude Include="mscan.h" />
     <ClInclude Include="TaskScheduler.h" />
+    <ClInclude Include="Triggerbot.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
